[DDW-225] fix vertical alignment of checkmark for any kind of options

--- a/source/themes/simple/SimpleOptions.scss
+++ b/source/themes/simple/SimpleOptions.scss
@@ -60,16 +60,18 @@ $options-bubble-arrow: true !default;
   padding: $option-padding;
 
   &.selectedOption {
-    position: relative;
+    display: flex;
     &:after {
+      align-self: center;
+      margin-left: auto;
+      margin-right: 2px;
+      position: relative;
+      bottom: 2px;
       border-style: solid;
       border-width: 0 2px 2px 0;
       content: "";
       width: 5px;
       height: 9px;
-      position: absolute;
-      right: 22px;
-      top: 19px;
       transform: rotate(45deg);
       border-color: $option-checkmark-color;
     }
